# M1-2022-git-workflow

./: .gitignore  BIN_Converter  README.md  converter_package_Thibault.py  ledocdeaxelqueelifeteluiaenvoyeavant  main.py  pyproject.toml  setup.py  test_converter.py  test_converty.py  test_main.py
.github/workflows/: .env  coverage.yml  my_package.yml  my_python-publish.yml  publish_pip.yml  python-package.yml  python-publish-real.yml  python-publish.yml  setup.py
SRC/EXAMPLE_PACKAGE_NOM_UTILISATEUR_GITHUB/: main.py
myevenv/: pyvenv.cfg
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
packaging_tutorial/: pyproject.toml
src/: converter.py
src/thomas_BUTON/: main.py
tests/: test_converter.py  test_main.py
