[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "thomas_BUTON"
version = "0.0.1"
authors = [
  { name="Thomas", email="thomas.buton@isen.yncrea.fr" },
]
description = "TP Git"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]